--- a/force-app/main/default/lwc/createJobPost/createJobPost.html
+++ b/force-app/main/default/lwc/createJobPost/createJobPost.html
@@ -1,26 +1,60 @@
+<!-- createJobPost.html -->
 <template>
     <lightning-card>
-        <!-- Title centered -->
-        <div class="center-content">
-            <h1>New Job Post</h1>
+        <!-- Header -->
+        <div class="header-container slds-p-around_small slds-grid slds-grid_vertical-align-center">
+            <!-- Left placeholder (keeps title centered) -->
+            <div class="slds-col slds-size_1-of-3"></div>
+
+            <!-- Page Title in the middle -->
+            <div class="slds-col slds-size_1-of-3 slds-text-align_center">
+                <h1 class="slds-text-heading_medium">{pageTitle}</h1>
+            </div>
+
+            <!-- Close (X) icon on the right -->
+            <div class="slds-col slds-size_1-of-3 slds-text-align_right">
+                <lightning-button-icon 
+                    icon-name="utility:close"
+                    alternative-text="Close"
+                    title="Close"
+                    onclick={handleClose}
+                    class="close-button">
+                </lightning-button-icon>
+            </div>
         </div>
 
         <!-- Form fields -->
         <div class="slds-p-around_medium">
             <lightning-record-edit-form 
                 object-api-name="Job_Post__c"
+                record-id={recordId}
                 onsuccess={handleSuccess}>
 
+                <!-- Input Fields -->
                 <lightning-input-field field-name="Job_Title__c" required></lightning-input-field>
                 <lightning-input-field field-name="Job_Description__c" required></lightning-input-field>
-                <lightning-input-field field-name="Required_Skills__c"></lightning-input-field>
+                <lightning-input-field field-name="Required_Skills__c" required></lightning-input-field>
                 <lightning-input-field field-name="Location__c" required></lightning-input-field>
                 <lightning-input-field field-name="Experience_Required__c"></lightning-input-field>
                 <lightning-input-field field-name="Status__c"></lightning-input-field>
 
-                <!-- Button centered -->
-                <div class="center-button slds-m-top_medium">
-                    <lightning-button class="large-button" type="submit" variant="brand" label="Post"></lightning-button>
+                <!-- Buttons -->
+                <div class="center-button slds-m-top_medium slds-grid slds-grid_align-center">
+                    <!-- Cancel button -->
+                    <lightning-button 
+                        type="button"
+                        variant="neutral"
+                        label="Cancel"
+                        onclick={handleClose}>
+                    </lightning-button>
+                    
+                    <!-- Submit button -->
+                    <lightning-button
+                        class="slds-m-left_small" 
+                        type="submit" 
+                        variant="brand" 
+                        label={buttonLabel}>
+                    </lightning-button>
                 </div>
             </lightning-record-edit-form>
         </div>
