updated the logic to fetch candidate

--- a/force-app/main/default/lwc/createJobPost/createJobPost.html
+++ b/force-app/main/default/lwc/createJobPost/createJobPost.html
@@ -32,7 +32,7 @@
 
                 <!-- Input Fields -->
                 <lightning-input-field field-name="Job_Title__c" required></lightning-input-field>
-                <lightning-input-field field-name="Job_Description__c" required></lightning-input-field>
+                <lightning-input-field field-name="Job_Description__c"></lightning-input-field>
                 <lightning-input-field field-name="Required_Skills__c" required></lightning-input-field>
                 <lightning-input-field field-name="Location__c" required></lightning-input-field>
                 <lightning-input-field field-name="Experience_Required__c"></lightning-input-field>
