--- a/mdapi_output/lwc/createJobPost/createJobPost.html
+++ b/mdapi_output/lwc/createJobPost/createJobPost.html
@@ -32,11 +32,10 @@
 
                 <!-- Input Fields -->
                 <lightning-input-field field-name="Job_Title__c" required></lightning-input-field>
-                <lightning-input-field field-name="Job_Description__c" required></lightning-input-field>
+                <lightning-input-field field-name="Job_Description__c"></lightning-input-field>
                 <lightning-input-field field-name="Required_Skills__c" required></lightning-input-field>
                 <lightning-input-field field-name="Location__c" required></lightning-input-field>
                 <lightning-input-field field-name="Experience_Required__c"></lightning-input-field>
-                <lightning-input-field field-name="Status__c"></lightning-input-field>
 
                 <!-- Buttons -->
                 <div class="center-button slds-m-top_medium slds-grid slds-grid_align-center">
